C# Practice: Add Arrays and Arraylists practice

--- a/mypractice-C#/Basics/Basics.csproj
+++ b/mypractice-C#/Basics/Basics.csproj
@@ -42,7 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HelloCSharp.cs" />
+    <Compile Include="01-HelloCSharp.cs" />
+    <Compile Include="02-ArraysAndLists.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
