--- a/week-11-projectstart/TodoApi/TodoApi/appsettings.json
+++ b/week-11-projectstart/TodoApi/TodoApi/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TodoContext-2;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
