W11: Add JWT auth to TodoApi app

--- a/week-11-projectstart/TodoApi/TodoApi/appsettings.json
+++ b/week-11-projectstart/TodoApi/TodoApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "SecretDecrypter": "Once upon a time there was a jwt token who was very happy that it worked"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
